--- a/main/FullCalender.css
+++ b/main/FullCalender.css
@@ -8,7 +8,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items:baseline;
     min-height: 100vh;
     background-image: url("https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FnvAfl%2Fbtr8htU0Zin%2F1LAUvI3qZGHKGb0EEgkbxK%2Fimg.jpg");
 }
