--- a/main/FullCalender.css
+++ b/main/FullCalender.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items:baseline;
     min-height: 100vh;
-    background-image: url("https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FnvAfl%2Fbtr8htU0Zin%2F1LAUvI3qZGHKGb0EEgkbxK%2Fimg.jpg");
+    background-image: url("https://img.etnews.com/news/article/2023/04/13/cms_temp_article_13104210029530.jpg");
 }
 
 .calendar {
