todo 개별 삭제 기능 추가 및 날짜 선택했을 때 할일 출력은 아직 못함 시팔

--- a/main/TodoList.css
+++ b/main/TodoList.css
@@ -69,7 +69,7 @@
 
 .todo-item {
     display: flex;
-    justify-content: space-between;
+    justify-content:center;
     align-items: center;
     background-color: #ffffff;
     border: 1px solid #333333;
@@ -80,6 +80,8 @@
 
 .todo-item span {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;   
 }
 
 .todo-item button {
