할일추가시 점추가 삭제 기능구현

--- a/main/FullCalender.css
+++ b/main/FullCalender.css
@@ -8,7 +8,7 @@
 body {
     display: flex;
     justify-content: center;
-    align-items:baseline;
+    align-items: baseline;
     min-height: 100vh;
     background-image: url("https://img.etnews.com/news/article/2023/04/13/cms_temp_article_13104210029530.jpg");
 }
@@ -17,8 +17,8 @@ body {
     width: 600px;
     margin: 50px;
     padding: 20px;
-    border-radius:5%;
-    background-color:rgba(255,255,255,0.8);
+    border-radius: 5%;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .header {
@@ -64,7 +64,7 @@ body {
     text-align: center;
 }
 
-.dates{
+.dates {
     display: flex;
     flex-flow: row wrap;
     height: 500px;
@@ -74,15 +74,25 @@ body {
 
 .date {
     width: calc(100%/7);
-    padding: 15px;    
-    text-align: right;
+    text-align: center;
+    padding: 15px;
     border-top: 1px solid #333333;
     border-left: 1px solid #333333;
 }
 
-span {
-    border: none;
+
+.this {
+    display: flex;
+    justify-content: center;
 }
+
+.dot {
+    display: inline-block;
+    padding-right: 5px;
+}
+
+
+
 
 .day:nth-child(7n+1),
 .date:nth-child(7n+8) {
@@ -95,16 +105,16 @@ span {
     color: #396ee2;
 }
 
-.date:nth-child(-n+7){
-    border-top: 0px ;
+.date:nth-child(-n+7) {
+    border-top: 0px;
 }
 
-.date:nth-child(7n+1){
+.date:nth-child(7n+1) {
     border-left: 0px;
 }
 
 .date.active {
-    background-color:rgba(57, 110, 226, 0.3);
+    background-color: rgba(57, 110, 226, 0.3);
     color: #fff;
 }
 
@@ -130,4 +140,3 @@ span {
     transform: translate(-50%, -50%);
     content: '';
 }
-
