--- a/main/FullCalender.css
+++ b/main/FullCalender.css
@@ -88,7 +88,12 @@ body {
 
 .dot {
     display: inline-block;
-    padding-right: 5px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: #000;
+    margin-left: 2px; /* 점 간격 조정 */
+    margin-top: 2px; /* 점 수직 위치 조정 */
 }
 
 
